--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "twig": "~1.11.0"
+  },
+  "engines": {
+    "node": "^9.4.0",
+    "npm": "^5.6.0"
   }
 }
