--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "mongoose":"~5.0.17",
+    "mongoose": "~5.0.17",
     "morgan": "~1.9.0",
+    "passport-facebook": "^2.1.1",
     "twig": "~1.11.0"
   },
   "engines": {
