--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-errors": "~1.6.2",
     "mongoose": "~5.0.17",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "twig": "~1.11.0"
   },
