--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "twig": "~1.11.0"
   },
